get all registrations implemented
